--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,9 @@ MENSAJES
     width: 100%;
     padding: 10px 10px;
   }
+  footer.d-flex{
+    flex-direction: column !important;
+  }
 }
 
 @media only screen and (max-width: 736px) and (orientation: landscape) {
@@ -411,6 +414,9 @@ MENSAJES
   .buttons button{
     width: 100%;
     padding: 10px 10px;
+  }
+  footer.d-flex{
+    flex-direction: column !important;
   }
 }
 
@@ -426,6 +432,9 @@ MENSAJES
     width: 100%;
     padding: 10px 10px;
   }
+  footer.d-flex{
+    flex-direction: column !important;
+  }
 }
 
 @media (max-width: 684px) and (orientation: landscape) {
@@ -435,6 +444,9 @@ MENSAJES
   .buttons button{
     width: 100%;
     padding: 10px 10px;
+  }
+  footer.d-flex{
+    flex-direction: column !important;
   }
 }
 
